--- a/utils/phpUtilKit/css/root.css
+++ b/utils/phpUtilKit/css/root.css
@@ -1,5 +1,3 @@
-@import "bootstrap.css";
-@import "Custom-Bootstrap-Util.css";
 /*
  --header - used to set default header background color
  --body-bg - to set body's background color
@@ -8,7 +6,7 @@
 :root,
 [data-bs-theme=light] {
     --header: #d3d3d3;
-    --body-bg: var(--bs-body-bg);
+    --body-bg: rgb(230, 230, 230);
     --bs-primary: #6610f2;
     --bs-primary-rgb: 102, 16, 242;
     --bs-primary-bg-subtle: #c29ffa;
